# 2025-final-individual-DRAKUTONT

solution/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  grafana_config.json  manage.py  prometheus.yml  pyproject.toml
solution/ads/: api.py  schemas.py  score.py  tests.py
solution/ads_platform/: api.py  asgi.py  error_handlers.py  errors.py  settings.py  urls.py  wsgi.py
solution/advertisers/: admin.py  api.py  models.py  schemas.py  tests.py
solution/advertisers/migrations/: 0001_initial.py  0002_click_cost_impression_cost.py  0003_alter_campaign_cost_per_click_and_more.py  0004_campaign_image.py  0005_alter_advertiser_name_alter_campaign_ad_text_and_more.py  0006_alter_campaign_cost_per_click_and_more.py
solution/ai_tools/: api.py  cache.py  utils.py
solution/clients/: api.py  models.py  schemas.py  tests.py
solution/clients/migrations/: 0001_initial.py  0002_alter_client_location_alter_client_login.py
solution/docs/: openapi.json  openapi.yaml
solution/score/: admin.py  api.py  models.py  schemas.py  tests.py
solution/score/migrations/: 0001_initial.py
solution/stats/: api.py  metrics.py  schemas.py  tests.py
solution/time_emulation/: api.py  apps.py  cache.py  schemas.py
